# byte-formatter

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
src/byte_formatter/: __init__.py  cli.py  formatter.py
tests/: test_formatter.py
