[tool.poetry]
name = "byte-formatter"
version = "0.0.1"
description = "A Python project for formatting bytes"
authors = ["Ryan Kane <rmkane@proton.me>"]
packages = [{ from = "src", include = "byte_formatter" }]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.scripts]
byte-formatter = "byte_formatter.cli:main"
