[tool.poetry]
name = "byte-formatter"
version = "0.0.2"
description = "A Python project for formatting bytes"
authors = ["Ryan Kane <rmkane@proton.me>"]
readme = "README.md"
homepage = "https://github.com/rmkane/byte-formatter"
repository = "https://github.com/rmkane/byte-formatter"
documentation = "https://github.com/rmkane/byte-formatter"
keywords = ["byte", "formatter", "cli"]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent"
]
packages = [
    { from = "src", include = "byte_formatter" }
]

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
yapf = "^0.40.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.poetry.scripts]
byte-formatter = "byte_formatter.cli:main"
